# CRM_improved

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/asio/: CONTROL
libs/asio/share/asio/: vcpkg.spdx.json  vcpkg_abi_info.txt
libs/nlohmann-json/: CMakeLists.txt  CONTROL
libs/nlohmann-json/share/nlohmann-json/: vcpkg.spdx.json  vcpkg_abi_info.txt
libs/openssl/: CMakeLists.txt  CONTROL
libs/openssl/share/openssl/: vcpkg.spdx.json  vcpkg_abi_info.txt
libs/restbed/: CMakeLists.txt  CONTROL
libs/restbed/lib/: restbed-shared.lib
libs/restbed/share/restbed/: vcpkg.spdx.json  vcpkg_abi_info.txt
libs/restbed/share/unofficial-restbed/: unofficial-restbed-target.cmake
libs/vcpkg-cmake/: CONTROL
libs/vcpkg-cmake-config/: CONTROL
libs/vcpkg-cmake-config/share/vcpkg-cmake-config/: vcpkg.spdx.json
libs/vcpkg-cmake-get-vars/: CONTROL
libs/vcpkg-cmake-get-vars/share/vcpkg-cmake-get-vars/: vcpkg.spdx.json  vcpkg_abi_info.txt
libs/vcpkg-cmake/share/vcpkg-cmake/: vcpkg.spdx.json
src/: CMakeLists.txt  main.cpp
src/SQL_SCRIPT/: schema.sql
src/web/: PageMain.html  Registration.html  Table.html  custom.css  custom.js  script.js
